--- a/example_configs.json
+++ b/example_configs.json
@@ -1,4 +1,5 @@
 {
+
 	"ems-transposenet-all":
 	{
 		"batch_size": 8,
@@ -138,5 +139,45 @@
 		"freeze": false,
 		"freeze_exclude_phrase": "regressor_head_rot",
 		"no_augment": false
+	},
+	"posenet": {
+		"batch_size": 32,
+		"learnable": true,
+		"s_x": -3.0,
+		"s_q": -6.5,
+		"norm": 2,
+		"lr": 1e-3,
+		"weight_decay": 1e-4,
+		"eps": 1e-10,
+		"lr_scheduler_step_size": 200,
+		"lr_scheduler_gamma": 0.5,
+		"n_epochs": 600
+	},
+	"ms-transposenet":
+	{
+		"batch_size": 8,
+		"num_scenes": 4,
+        "equalize_scenes": true,
+		"learnable": true,
+		"s_x": -3,
+		"s_q": -6.5,
+		"lr": 1e-4,
+		"norm": 2,
+		"weight_decay": 1e-4,
+		"eps": 1e-10,
+		"lr_scheduler_gamma": 0.1,
+		"lr_scheduler_step_size": 200,
+		"n_epochs": 600,
+		"num_t_encoder_layers": 6,
+		"num_t_decoder_layers": 6,
+		"num_rot_encoder_layers": 6,
+		"num_rot_decoder_layers": 6,
+		"dim_feedforward": 256,
+		"hidden_dim":256,
+		"dropout": 0.1,
+		"nheads": 4,
+        "reduction": ["reduction_4", "reduction_3"],
+		"freeze": false,
+		"freeze_exclude_phrase": "regressor_head_rot"
 	}
 }
